[project]
name = "hotosm-country-exports"
version = "0.0.1"
description = "HOT OSM country-scale HDX exports."
requires-python = ">=3.11"
dependencies = ["oex>=0.4.1", "pyyaml>=6.0.2"]

[dependency-groups]
dev = ["ruff>=0.13"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = false
